--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0411
 Name=Japanese (日本語)
-Version=2.7.9.3
+Version=2.8.4
 Author=Re*Index.(ot_inc)
 1=OK
 2=キャンセル
@@ -45,7 +45,7 @@ Author=Re*Index.(ot_inc)
 9=テーマ:
 10=AES ハードウェアアクセラレーションを使用する(&A)
 11=<a>ベンチマーク</a>
-12=Show &information window for new media
+12=新しいメディアの情報ウィンドウを表示する(&I)
 
 [DIALOG_9]
 0=CD
@@ -108,9 +108,9 @@ Author=Re*Index.(ot_inc)
 14=MD5 チェックサムファイルを作成する(&M)
 15=dvdid.xml を作成する(&D)
 16=ログファイルを作成する
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS sync bytes
+17=disc.metaiso を作成する(&M)
+18=VIDEO_TS フォルダーのみコピー(&V)
+19=M2TS 同期バイトを検証する(&M)
 
 [DIALOG_15]
 0=Xreveal
@@ -125,9 +125,9 @@ Author=Re*Index.(ot_inc)
 0=プレーヤーのリージョン
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
+0=リッピング
+3=読み込みの再試行回数:
+4=無視されるエラーを超過時に中止するまでの回数:
 
 [DIALOG_18]
 0=登録
@@ -165,12 +165,12 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_24]
 0=ドライブの情報
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=既定値 (%s)
+13=強制的にはい
+14=強制的にいいえ
+15=グローバルの値 (%s)
+16=有効
+17=無効
 
 [DIALOG_25]
 0=インポート...
@@ -197,8 +197,8 @@ Author=Re*Index.(ot_inc)
 0=アクション
 3=スキャン後のアクション
 4=メディアをスキャン後に実行するコマンドを指定します。 <a>対応しているマクロ</a>。
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+5=リッピング後のアクション
+6=ディスクをリッピング後に実行するコマンドを指定します。 <a>対応しているマクロ</a>。
 
 [DIALOG_30]
 0=国コード
@@ -381,14 +381,14 @@ Author=Re*Index.(ot_inc)
 148=ビジー
 149=アップデートを確認(&C)
 150=保存(&S)...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
+151=LibreDrive を有効化
+152=ドライブの証明書
+153=有効
+154=無効
+155=一時停止
+156=無制限
+157=本当に登録を解除しますか？
+158=Xreveal によってドライブがスキャンされません。<a>マイドライブ</a>から設定を変更できます。
+159=宛先となるドライブ「%C:」に十分な空き容量がありません！
+160=アクション
+161=再スキャン
