Update Italian translation

--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.8.2
+Version=2.8.4
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -45,7 +45,7 @@ Author=bovirus (bovirus@gmail.com)
 9=Tema:
 10=Usa accelerazione hardware &AES
 11=<a>Prestazioni</a>
-12=Show &information window for new media
+12=Mostra finestra informativa per nuovi media
 
 [DIALOG_9]
 0=CD
@@ -177,7 +177,7 @@ Author=bovirus (bovirus@gmail.com)
 3=Specifica o trascina la sorgente keydb.db da importare in <a>%s</a>.
 
 [DIALOG_26]
-0=Verificatore Hash contenuto
+0=Verificatore hash contenuto
 
 [DIALOG_27]
 0=Suoni
@@ -326,7 +326,7 @@ Author=bovirus (bovirus@gmail.com)
 93=Sei sicuro di voler eliminare '%s'?
 94=Sei sicuro di voler eliminare tutti i record?
 95=Questa funzione è disponibile solo nella <a>versione Pro</a>.
-96=Aggio&rna
+96=Aggiorna
 97=&Modifica
 98=&Importa...
 99=
