--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.4
+Version=2.8.5
 Author=Tanuki
 1=确定
 2=取消
@@ -125,9 +125,12 @@ Author=Tanuki
 0=播放器区域码
 
 [DIALOG_17]
-0=Ripper
+0=翻录
 3=读取失败后重试次数:
 4=当忽略的读取错误超过阈值时中止:
+5=在将蓝光3D复制到文件夹时复制SSIF文件夹
+6=将驱动器状态内容追加到复制日志
+7=在创建受保护的ISO时显示警告
 
 [DIALOG_18]
 0=注册
@@ -142,7 +145,7 @@ Author=Tanuki
 6=启用/禁用 Xreveal:
 7=复制到 ISO 文件:
 8=复制到文件夹:
-9=内容哈希值校验:
+9=M2TS哈希值校验:
 
 [DIALOG_20]
 0=HD DVD
@@ -177,7 +180,7 @@ Author=Tanuki
 3=请指定或拖动源 keydb.db 以导入到 <a>%s</a> 中。
 
 [DIALOG_26]
-0=内容哈希值校验
+0=M2TS哈希值校验
 
 [DIALOG_27]
 0=声音
@@ -204,6 +207,21 @@ Author=Tanuki
 0=国家码
 3=国家
 4=国家码
+
+[DIALOG_31]
+0=设置更改
+3=设置已更改，您是否要重新扫描驱动器？
+
+[DIALOG_32]
+0=光驱证书
+3=类型:
+4=总线加密:
+5=长度:
+6=ID:
+7=保留:
+8=公钥:
+9=签名:
+10=设备号:
 
 [DIALOG_A]
 0=软件更新
@@ -273,9 +291,9 @@ Author=Tanuki
 40=状态(&S)
 41=在资源管理器中打开(&O)
 42=生成&Dump文件
-43=内容哈希值校验(&C)
-44=复制到硬盘...
-45=复制到映像...
+43=M2TS哈希值校验(&C)
+44=复制到硬盘...(&F)
+45=复制到映像...(&I)
 46=启用 Xreveal(&E)
 47=禁用 Xreveal(&D)
 48=设置(&S)
@@ -313,7 +331,7 @@ Author=Tanuki
 80=碟片ID
 81=添加日期
 82=MKB
-83=主菜单
+83=主播放列表
 84=BD+ 日期
 85=
 86=VID
@@ -330,7 +348,7 @@ Author=Tanuki
 97=编辑(&E)
 98=导入(&I)...
 99=
-100=注释
+100=备注
 101=验证镜像
 102=验证文件夹
 103=验证光驱
