--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.2
+Version=2.8.4
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -45,7 +45,7 @@ Author=The Punisher
 9=Schema:
 10=&AES Hardwarebeschleunigung nutzen
 11=<a>Benchmark</a>
-12=Show &information window for new media
+12=&Informationsfenster für neue Medien anzeigen
 
 [DIALOG_9]
 0=CD
@@ -62,7 +62,7 @@ Author=The Punisher
 9=ARccOS entfernen
 10=Untertitel-Transparenz
 11=Xreveal benötigt <a>libdvdcss-2.dll</a> um DVDs zu öffnen
-12=AutoRun deaktivieren
+12=Auto-Start deaktivieren
 
 [DIALOG_11]
 0=BD & UHD
@@ -125,9 +125,12 @@ Author=The Punisher
 0=Player-Region
 
 [DIALOG_17]
-0=Ripper
+0=Rippen
 3=Anzahl wiederholter Leseversuche:
 4=Abbrechen wenn ignorierte Fehler mehr als:
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -204,6 +207,21 @@ Author=The Punisher
 0=Ländercode
 3=Land
 4=Code
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Software-Update
