--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.4
+Version=2.8.5
 Author=
 1=OK
 2=Cancel
@@ -128,6 +128,9 @@ Author=
 0=Ripper
 3=Read retry count:
 4=Abort when ignored errors exceed :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Register Xreveal
@@ -204,6 +207,21 @@ Author=
 0=Country code
 3=Country
 4=Code
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Software Update
