--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -128,6 +128,9 @@ Author=비너스걸 (VenusGirl)
 0=리퍼
 3=읽기 재시도 횟수:
 4=무시된 오류가 초과하면 중단 :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=등록
@@ -204,6 +207,21 @@ Author=비너스걸 (VenusGirl)
 0=국가 코드
 3=국가
 4=코드
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=소프트웨어 업데이트
