--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -128,6 +128,9 @@ Author=jekovcar
 0=Риппер
 3=Счет попыток чтения:
 4=Прервать, если игнорируемых ошибок превышает :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -204,6 +207,21 @@ Author=jekovcar
 0=Код страны
 3=Страна
 4=Код
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Обновление программы
