--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -128,6 +128,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Copiador
 3=Número de reintentos de lectura:
 4=Abortar cuando los errores ignorados excedan :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -204,6 +207,21 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Código de país
 3=País
 4=Código
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Actualización de Software
