--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -128,6 +128,9 @@ Author=jekovcar
 0=Рипър
 3=Брой опити за четене:
 4=Прекрати, когато грешките надвишат :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Регистрация на Xreveal
@@ -204,6 +207,21 @@ Author=jekovcar
 0=Код на страната
 3=Държава
 4=Код
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Актуализация софтуер
