--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -128,6 +128,9 @@ Author=bovirus (bovirus@gmail.com)
 0=Ripper
 3=Numero tentativi di lettura:
 4=Abbandona quando gli errori ignorati sono superiori a :
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -204,6 +207,21 @@ Author=bovirus (bovirus@gmail.com)
 0=Codice regionale
 3=Paese
 4=Codice
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Aggiornamento programma
