--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -128,6 +128,9 @@ Author=Re*Index.(ot_inc)
 0=リッピング
 3=読み込みの再試行回数:
 4=無視されるエラーを超過時に中止するまでの回数:
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=登録
@@ -204,6 +207,21 @@ Author=Re*Index.(ot_inc)
 0=国コード
 3=国
 4=コード
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
