--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -128,6 +128,9 @@ Author=Sopor, Harry Samwel
 0=Rippare
 3=Läs-om räknare:
 4=Avbryt när ignorerade fel överstiger:
+5=Copy SSIF folder while ripping Blu-ray 3D to folder
+6=Append the drive status content to the rip log
+7=Show warning when creating a protected image
 
 [DIALOG_18]
 0=Registrering
@@ -204,6 +207,21 @@ Author=Sopor, Harry Samwel
 0=Landskod
 3=Land
 4=Kod
+
+[DIALOG_31]
+0=Settings Change
+3=Settings have changed, do you want to rescan drives?
+
+[DIALOG_32]
+0=Drive Certificate
+3=Type:
+4=Bus encryption:
+5=Length:
+6=ID:
+7=Reserved:
+8=Public key:
+9=Signature:
+10=Device number:
 
 [DIALOG_A]
 0=Programuppdatering
