--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.4
+Version=2.8.5
 Author=Andex
 1=OK
 2=Annuler
@@ -128,9 +128,9 @@ Author=Andex
 0=Copie
 3=&Tentatives de lecture:
 4=&Abandonner lorsque le nombre d'erreurs ignorées dépasse:
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+5=Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
+6=Ajouter l'état du lecteur au journal de copie
+7=Afficher un avertissement lors de la création d'une image ISO protégée
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -209,19 +209,19 @@ Author=Andex
 4=Code
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Modification des paramètres
+3=Des paramètres ont été changés, voulez-vous rescanner le(s) lecteur(s)?
 
 [DIALOG_32]
-0=Drive Certificate
+0=Certificat du lecteur
 3=Type:
-4=Bus encryption:
-5=Length:
+4=Bus Encryption:
+5=Longueur:
 6=ID:
-7=Reserved:
-8=Public key:
+7=Réservé:
+8=Clé publique:
 9=Signature:
-10=Device number:
+10=N° du dispositif:
 
 [DIALOG_A]
 0=Mise à jour
