--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.4
+Version=2.8.5
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -128,9 +128,9 @@ Author=The Punisher
 0=Rippen
 3=Anzahl wiederholter Leseversuche:
 4=Abbrechen wenn ignorierte Fehler mehr als:
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+5=SSIF-Ordner kopieren während eine 3D Blu-ray in einen Ordner gerippt wird.
+6=Laufwerksstatus an den Rip-Log anhängen.
+7=Hinweis anzeigen wenn ein geschütztes Image erzeugt wird.
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -194,7 +194,7 @@ Author=The Punisher
 3=Bitte haben Sie etwas Geduld...
 4=Erstelle %s...
 5=<a>Wie Sie die Infodump-Datei schicken können</a>
-6=Die Infodump-Datei wurde erfolgreich erstellt.
+6=Die Infodump-Datei wurde erfolgreich erstellt
 
 [DIALOG_29]
 0=Aktionen
@@ -209,18 +209,18 @@ Author=The Punisher
 4=Code
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Einstellungen ändern
+3=Einstellungen wurden geändert, möchten sie die Laufwerke erneut scannen?
 
 [DIALOG_32]
-0=Drive Certificate
-3=Type:
-4=Bus encryption:
-5=Length:
+0=Laufwerkszertifikat
+3=Typ:
+4=Bus-Verschlüsselung:
+5=Länge:
 6=ID:
-7=Reserved:
+7=Reserviert:
 8=Public key:
-9=Signature:
+9=Signatur:
 10=Device number:
 
 [DIALOG_A]
