--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -1,8 +1,8 @@
 [INFO]
 ID=0x041D
 Name=Swedish (Svenska)
-Version=2.8.4
-Author=Sopor, Harry Samwel
+Version=2.8.5
+Author=Harry Samwel, Sopor
 1=OK
 2=Avbryt
 
@@ -128,9 +128,9 @@ Author=Sopor, Harry Samwel
 0=Rippare
 3=Läs-om räknare:
 4=Avbryt när ignorerade fel överstiger:
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+5=Kopiera SSIF mapp under rippning av blu-ray 3D till mapp
+6=Lägg till enhetsstatusen till ripploggen
+7=Visa varning när skyddad avbild skapas
 
 [DIALOG_18]
 0=Registrering
@@ -145,7 +145,7 @@ Author=Sopor, Harry Samwel
 6=Aktivera/Avaktivera Xreveal:
 7=Rippa till ISO fil:
 8=Rippa till mapp:
-9=Verifiera innehållshash:
+9=Verifiera hash för innehåll:
 
 [DIALOG_20]
 0=HD DVD
@@ -209,19 +209,19 @@ Author=Sopor, Harry Samwel
 4=Kod
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Ändrade inställningar
+3=Inställningar har ändrats, vill du skanna om enheterna?
 
 [DIALOG_32]
-0=Drive Certificate
-3=Type:
-4=Bus encryption:
-5=Length:
+0=Enhetscertifikat
+3=Typ:
+4=Busskryptering:
+5=Längd:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
+7=Reserverad:
+8=Allmän nyckel:
+9=Signatur:
+10=Enhetsnummer:
 
 [DIALOG_A]
 0=Programuppdatering
@@ -291,7 +291,7 @@ Author=Sopor, Harry Samwel
 40=Status
 41=Öppna i webläsare
 42=Skapa en dumpfil
-43=Innehållshash verifierare...
+43=Hashverifierare...
 44=Kopiera till hårddisk...
 45=Kopiera till skivavbild...
 46=Aktivera Xreveal
@@ -410,3 +410,4 @@ Author=Sopor, Harry Samwel
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
