--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -104,7 +104,7 @@ Author=Harry Samwel, Sopor
 10=Fritt utrymme:
 11=Kapacitet:
 12=Behåll skydd
-13=Verifiera innehållshash
+13=Verifiera hash för innehåll
 14=Skapa MD5 kontrollsummafil
 15=Skapa dvdid.xml
 16=Skapa loggfil
@@ -180,7 +180,7 @@ Author=Harry Samwel, Sopor
 3=Välj eller släpp keydb.cfg källfilen för att importera till <a>%s</a>.
 
 [DIALOG_26]
-0=Innehållshash verifierare
+0=Verifiera hash för innehåll
 
 [DIALOG_27]
 0=Ljud
@@ -291,7 +291,7 @@ Author=Harry Samwel, Sopor
 40=Status
 41=Öppna i webläsare
 42=Skapa en dumpfil
-43=Hashverifierare...
+43=Verifiera hash...
 44=Kopiera till hårddisk...
 45=Kopiera till skivavbild...
 46=Aktivera Xreveal
@@ -410,4 +410,5 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
