--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -129,7 +129,7 @@ Author=Harry Samwel, Sopor
 3=Läs-om räknare:
 4=Avbryt när ignorerade fel överstiger:
 5=Kopiera SSIF mapp under rippning av blu-ray 3D till mapp
-6=Lägg till enhetsstatusen till ripploggen
+6=Lägg till enhetsstatus i loggen
 7=Visa varning när skyddad avbild skapas
 
 [DIALOG_18]
@@ -388,7 +388,7 @@ Author=Harry Samwel, Sopor
 137=Pro funktion
 138=Avregistrera
 139=Du kommer skapa en skyddad diskavbildningsfil. Filen kan endast läsas från en virtuell enhet, om Xreveal är installerad och körs!\n\nVill du fortsätta?
-140=Radera ofärdig fil?\n\n%s
+140=Radera ej färdig fil?\n\n%s
 141=Ljus
 142=Mörk
 143=System
@@ -410,5 +410,6 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
