--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -322,11 +322,11 @@ Author=Harry Samwel, Sopor
 71=Registreringsnyckeln du angivit är felaktig.
 72=Ingen skiva
 73=Återställ ALLA inställningar till deras ursprungsvärden?\n\nOm du klickar på 'Nej' återställs bara inställningar för aktuella sidan.
-74=ID
+74=Skivnummer
 75=Status
 76=Titel
 77=Typ
-78=Kapacitet
+78=Storlek
 79=Datum
 80=Skiv ID
 81=Datum inlagd
@@ -410,6 +410,7 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
 
