--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -327,9 +327,9 @@ Author=Harry Samwel, Sopor
 76=Titel
 77=Typ
 78=Storlek
-79=Datum
+79=Skapad
 80=Skiv ID
-81=Datum inlagd
+81=Inlagd
 82=MKB
 83=Huvudspellista
 84=BD+ datum
@@ -410,6 +410,7 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
 
