--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -110,7 +110,7 @@ Author=Harry Samwel, Sopor
 16=Skapa loggfil
 17=Skapa skiva.metaiso
 18=Kopiera bara VIDEO_TS mapp
-19=Verifiera M2TS synk-bytes
+19=Verifiera M2TS synk-byte
 
 [DIALOG_15]
 0=Xreveal
@@ -410,6 +410,7 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
 
