--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -99,10 +99,10 @@ Author=Harry Samwel, Sopor
 5=Alternativ
 6=Info
 7=Typ:
-8=Kapacitet:
+8=Storlek:
 9=Skydd:
 10=Fritt utrymme:
-11=Kapacitet:
+11=Storlek:
 12=Behåll skydd
 13=Verifiera hash för innehåll
 14=Skapa MD5 kontrollsummafil
@@ -281,7 +281,7 @@ Author=Harry Samwel, Sopor
 30=Tillverkare
 31=Modell
 32=Version
-33=Firmware/datum
+33=Tillverkarspecifik
 34=Serienummer
 35=N/A
 36=Ja
@@ -322,7 +322,7 @@ Author=Harry Samwel, Sopor
 71=Registreringsnyckeln du angivit är felaktig.
 72=Ingen skiva
 73=Återställ ALLA inställningar till deras ursprungsvärden?\n\nOm du klickar på 'Nej' återställs bara inställningar för aktuella sidan.
-74=Skivnummer
+74=Rad ID
 75=Status
 76=Titel
 77=Typ
@@ -332,7 +332,7 @@ Author=Harry Samwel, Sopor
 81=Inlagd
 82=MKB
 83=Huvudspellista
-84=BD+ datum
+84=BD+
 85=
 86=VID
 87=MK
@@ -410,6 +410,7 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
 
