--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -128,9 +128,9 @@ Author=bovirus (bovirus@gmail.com)
 0=Ripper
 3=Numero tentativi di lettura:
 4=Abbandona quando gli errori ignorati sono superiori a :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+5=Copia cartella SSIF durante il rip del Blu-ray 3D nella cartella
+6=Aggiungi il contenuto dello stato dell'unità al log del rip
+7=Mostra avviso alla creazione di un'immagine protetta
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -209,19 +209,19 @@ Author=bovirus (bovirus@gmail.com)
 4=Codice
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Modifica impostazioni
+3=Impostazioni modificate, vuoi eseguire nuovamente la scansione delle unità?
 
 [DIALOG_32]
-0=Drive Certificate
-3=Type:
-4=Bus encryption:
-5=Length:
+0=Certificato unità
+3=Tipo:
+4=Criptazione bus:
+5=Lunghezza:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
+7=Riservato:
+8=Chiave pubblica:
+9=Firma:
+10=Numero unità:
 
 [DIALOG_A]
 0=Aggiornamento programma
