--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -99,7 +99,7 @@ Author=jekovcar
 5=Опции
 6=Информация
 7=Тип:
-8=Капацитет:
+8=Размер:
 9=Защита:
 10=Свободно място:
 11=Капацитет:
@@ -190,11 +190,16 @@ Author=jekovcar
 6=Звук за грешка:
 
 [DIALOG_28]
-0=Създай дъмп файл
-3=Моля, изчакайте...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Добавяне на %s...
-5=<a>Как да изпратя дъмп файлове?</a>
-6=Файлът е създаден успешно.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Действия
@@ -213,7 +218,7 @@ Author=jekovcar
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author=jekovcar
 71=Въведеният регистрационен ключ е невалиден.
 72=Няма диск
 73=Нулирай ВСИЧКИ опции до подразбиране?\n\nЩракване върху „Не“ просто ще нулира опциите на текущата страница.
-74=ID
+74=RowID
 75=Статус
 76=Етикет
 77=Тип
-78=Капацитет
+78=Размер
 79=Дата
 80=Диск ID
 81=Дата на добавяне
@@ -410,3 +415,6 @@ Author=jekovcar
 159=There is no enough space on destination drive %C:!
 160=Action
 161=Rescan
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
