--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.5
+Version=2.8.6
 Author=Tanuki
 1=确定
 2=取消
@@ -99,7 +99,7 @@ Author=Tanuki
 5=选项
 6=信息
 7=类型:
-8=容量:
+8=大小:
 9=保护:
 10=剩余空间:
 11=容量:
@@ -190,11 +190,16 @@ Author=Tanuki
 6=错误声音:
 
 [DIALOG_28]
-0=创建dump文件
-3=请等待...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=提交 %s...
-5=<a>如何提交?</a>
-6=文件已成功创建。
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=动作
@@ -213,7 +218,7 @@ Author=Tanuki
 3=设置已更改，您是否要重新扫描驱动器？
 
 [DIALOG_32]
-0=光驱证书
+0=AACS证书解码器
 3=类型:
 4=总线加密:
 5=长度:
@@ -290,7 +295,7 @@ Author=Tanuki
 39=%C:\[%S]
 40=状态(&S)
 41=在资源管理器中打开(&O)
-42=生成&Dump文件
+42=生成元文件
 43=M2TS哈希值校验(&C)
 44=复制到硬盘...(&F)
 45=复制到映像...(&I)
@@ -322,17 +327,17 @@ Author=Tanuki
 71=你输入的注册码不正确。
 72=无碟
 73=重置所有选项到默认值?\n\n点击 “否” 仅重置当前页面选项。
-74=ID
+74=列ID
 75=状态
 76=盘标
 77=类型
-78=容量
-79=日期
+78=大小
+79=创建日期
 80=碟片ID
 81=添加日期
 82=MKB
 83=主播放列表
-84=BD+ 日期
+84=BD+创建日期
 85=
 86=VID
 87=MK
@@ -410,3 +415,6 @@ Author=Tanuki
 159=目标驱动器 %C: 上没有足够的空间!
 160=操作
 161=重新扫描
+162=可选
+163=文件提交成功，谢谢!
+164=关闭此窗口
