--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -99,7 +99,7 @@ Author=The Punisher
 5=Einstellungen
 6=Info
 7=Typ:
-8=Kapazität:
+8=Größe:
 9=Schutz:
 10=Verfügbar:
 11=Kapazität:
@@ -190,11 +190,16 @@ Author=The Punisher
 6=Fehlermeldung:
 
 [DIALOG_28]
-0=Erstelle Infodump-Datei
-3=Bitte haben Sie etwas Geduld...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Erstelle %s...
-5=<a>Wie Sie die Infodump-Datei schicken können</a>
-6=Die Infodump-Datei wurde erfolgreich erstellt
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Aktionen
@@ -322,11 +327,11 @@ Author=The Punisher
 71=Der von Ihnen eingegebene Registrierungsschlüssel ist falsch.
 72=Keine Disc
 73=Alle Einstellungen auf Standard zurücksetzen?\n\nWenn Sie auf 'Nein' klicken, wird nur die aktuelle Seite zurückgesetzt.
-74=ID
+74=RowID
 75=Status
 76=Label
 77=Typ
-78=Kapazität
+78=Größe
 79=Datum
 80=Disc ID
 81=Hinzufügungsdatum
@@ -410,3 +415,6 @@ Author=The Punisher
 159=Nicht genug freier Speicherplatz auf Ziellaufwerk %C:!
 160=Vorgang
 161=Erneut scannen
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
