--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.5
+Version=2.8.6
 Author=
 1=OK
 2=Cancel
@@ -99,7 +99,7 @@ Author=
 5=Options
 6=Info
 7=Type:
-8=Capacity:
+8=Size:
 9=Protection:
 10=Free space:
 11=Capacity:
@@ -190,11 +190,16 @@ Author=
 6=Error sound:
 
 [DIALOG_28]
-0=Create a Dump File
-3=Please wait...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Adding %s...
-5=<a>How to submit a dump file?</a>
-6=The file has been successfully created.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Actions
@@ -213,7 +218,7 @@ Author=
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -290,7 +295,7 @@ Author=
 39=%C:\[%S]
 40=&Status
 41=&Open in Explorer
-42=&Create a dump file
+42=&Metafile submission
 43=&Content Hash Verifier
 44=Rip to &Folder...
 45=Rip to &ISO File...
@@ -322,17 +327,17 @@ Author=
 71=The registration key that you have entered, is not valid.
 72=No Disc
 73=Reset ALL the options to their default values?\n\nClicking 'No' will reset the current page options.
-74=ID
+74=RowID
 75=Status
 76=Label
 77=Type
-78=Capacity
-79=Date
-80=Disc ID
-81=Date added
+78=Size
+79=Created
+80=DiscID
+81=Added
 82=MKB
 83=Main playlist
-84=BD+ date
+84=BD+ created
 85=
 86=VID
 87=MK
@@ -410,3 +415,6 @@ Author=
 159=There is no enough space on destination drive %C:!
 160=Action
 161=Rescan
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
