--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -190,11 +190,16 @@ Author=Andex
 6=&Erreur:
 
 [DIALOG_28]
-0=Créer un fichier d'informations
-3=Patienter SVP...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Ajout de %s...
-5=<a>Comment transmettre un fichier d'informations?</a>
-6=Le fichier a été correctement créé!
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Actions
@@ -410,3 +415,6 @@ Author=Andex
 159=Manque d'espace libre sur le lecteur de destination %C:!
 160=Action
 161=Rescanner
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
