--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -99,7 +99,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 5=Opsi
 6=Info
 7=Tipe:
-8=Kapasitas:
+8=Size:
 9=Proteksi:
 10=Sisa penyimpanan:
 11=Kapasitas:
@@ -190,11 +190,16 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=Suara kesalahan:
 
 [DIALOG_28]
-0=Buat Berkas Dump
-3=Silahkan tunggu...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Menambahkan %s...
-5=<a>Cara untuk submit berkas dump?</a>
-6=Berkas berhasil dibuat.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Actions
@@ -213,7 +218,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author= Lieba Natur Brilian (naturbrilian)
 71=Kunci registrasi yang anda masukkan tidak valid.
 72=Tidak ada Disc
 73=Kembalikan SEMUA opsi ke value default?\n\nMengklik 'Tidak' hanya akan mengembalikan ke opsi halaman saat ini.
-74=ID
+74=RowID
 75=Status
 76=Label
 77=Tipe
-78=Kapasitas
+78=Size
 79=Tanggal
 80=Disc ID
 81=Tanggal ditambahkan
@@ -410,3 +415,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 159=There is no enough space on destination drive %C:!
 160=Action
 161=Rescan
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
