--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -99,7 +99,7 @@ Author=bovirus (bovirus@gmail.com)
 5=Opzioni
 6=Informazioni
 7=Tipo:
-8=Capacità:
+8=Dimensione:
 9=Protezione:
 10=Spazio libero:
 11=Capacità:
@@ -190,11 +190,16 @@ Author=bovirus (bovirus@gmail.com)
 6=Suono errore durante il ripping:
 
 [DIALOG_28]
-0=Crea un file di dump
-3=Attendere...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Aggiunta di %s...
-5=<a>Come inoltrare un file di dump?</a>
-6=Il file è stato creato con successo.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Azioni
@@ -322,11 +327,11 @@ Author=bovirus (bovirus@gmail.com)
 71=La chiave di registrazione inserita non è corretta.
 72=Nessun disco
 73=Vuoi ripristinare TUTTE le opzioni ai valori predefiniti?\n\nSelezionando "No" verranno ripristinate semplicemente le opzioni della pagina attuale.
-74=ID
+74=RowID
 75=Stato
 76=Etichetta
 77=Tipo
-78=Capacità
+78=Dimensione
 79=Data
 80=ID disco
 81=Data aggiunta
@@ -410,3 +415,6 @@ Author=bovirus (bovirus@gmail.com)
 159=Spazio insufficiente nell'unità di destinazione %C:!
 160=Azione
 161=Riesegui la scansione
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
