--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -99,7 +99,7 @@ Author=Re*Index.(ot_inc)
 5=オプション
 6=情報
 7=タイプ:
-8=容量:
+8=サイズ:
 9=プロテクト:
 10=空き容量:
 11=容量:
@@ -190,11 +190,16 @@ Author=Re*Index.(ot_inc)
 6=エラー時のサウンド:
 
 [DIALOG_28]
-0=ダンプファイルを作成
-3=お待ちください...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=%s を追加中...
-5=<a>ダンプファイルの提出方法は？</a>
-6=ファイルが正常に作成されました。
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=アクション
@@ -213,7 +218,7 @@ Author=Re*Index.(ot_inc)
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author=Re*Index.(ot_inc)
 71=入力したキーは正しくありません。
 72=ディスクなし
 73=すべてのオプションを既定値にリセットしますか？\n\n「いいえ」をクリックすると、現在のページのオプションのみをリセットします。
-74=ID
+74=RowID
 75=状態
 76=ラベル
 77=タイプ
-78=容量
+78=サイズ
 79=日付
 80=ディスク ID
 81=追加日
@@ -410,3 +415,6 @@ Author=Re*Index.(ot_inc)
 159=宛先となるドライブ「%C:」に十分な空き容量がありません！
 160=アクション
 161=再スキャン
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
