--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -99,7 +99,7 @@ Author=비너스걸 (VenusGirl)
 5=옵션
 6=정보
 7=유형:
-8=용량:
+8=크기:
 9=보호:
 10=남은 공간:
 11=용량:
@@ -190,11 +190,16 @@ Author=비너스걸 (VenusGirl)
 6=오류 사운드:
 
 [DIALOG_28]
-0=덤프 파일 만들기
-3=잠시만 기다려 주세요...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=%s 추가 중...
-5=<a>덤프 파일은 어떻게 제출하나요?</a>
-6=파일이 성공적으로 생성되었습니다.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=동작
@@ -213,7 +218,7 @@ Author=비너스걸 (VenusGirl)
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author=비너스걸 (VenusGirl)
 71=입력한 등록 키가 잘못되었습니다.
 72=디스크 없음
 73=모든 옵션을 기본값으로 재설정하시겠습니까?\n\n아니오'를 클릭하면 현재 페이지 옵션만 재설정됩니다.
-74=ID
+74=RowID
 75=상태
 76=레이블
 77=유형
-78=용량
+78=크기
 79=날짜
 80=디스크 ID
 81=추가된 날짜
@@ -410,3 +415,6 @@ Author=비너스걸 (VenusGirl)
 159=대상 드라이브에 공간이 충분하지 않습니다 %C:!
 160=동작
 161=다시 검색
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
