--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -99,7 +99,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 5=Opciones
 6=Información
 7=Tipo:
-8=Capacidad:
+8=Tamaño:
 9=Protección:
 10=Espacio libre:
 11=Capacidad:
@@ -190,11 +190,16 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Sonido de error:
 
 [DIALOG_28]
-0=Crear un Archivo de Volcado
-3=Por favor, espera...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Añadiendo %s...
-5=<a>¿Cómo envíar un archivo de volcado?</a>
-6=El archivo ha sido creado correctamente.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Acciones
@@ -213,7 +218,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author=Steven Rogers, Leandro Botella Penalva
 71=La clave de registro que has introducido no es válida.
 72=Sin Disco
 73=¿Restablecer TODAS las opciones a sus valores predeterminados?\n\nAl pulsar 'No' se restablecerán las opciones de la página actual.
-74=ID
+74=RowID
 75=Estado
 76=Etiqueta
 77=Tipo
-78=Capacidad
+78=Tamaño
 79=Fecha
 80=ID del Disco
 81=Fecha añadido
@@ -410,3 +415,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 159=No hay espacio suficiente en la unidad de destino %C:!
 160=Acción
 161=Rescanear
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
