--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -190,11 +190,16 @@ Author=Harry Samwel, Sopor
 6=Ljud efter misslyckad process:
 
 [DIALOG_28]
-0=Skapa en Dumpfil
-3=Var god vänta...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Lägger till %s...
-5=<a>Hur lämnar man in en dumpfil?</a>
-6=Filen har skapats utan problem.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Funktioner
@@ -410,10 +415,6 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
-
-
-
-
-
-
-
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
