--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -99,7 +99,7 @@ Author=jekovcar
 5=Параметры
 6=Информация
 7=Тип:
-8=Емкость:
+8=Размер:
 9=Защита:
 10=Свободное место:
 11=Емкость:
@@ -190,11 +190,16 @@ Author=jekovcar
 6=Звук ошибки:
 
 [DIALOG_28]
-0=Создать файл дампа
-3=Пожалуйста, подождите...
+0=Metafile submission
+1=&Submit
+3=Creating the disc metafile, please wait...
 4=Добавление %s...
-5=<a>Как отправить файлы дампа?</a>
-6=Файл успешно создан.
+5=<a>Submit manually?</a>
+6=Metafile:
+7=Email:
+8=Comment:
+9=Uploading %s of %s
+10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
 [DIALOG_29]
 0=Действия
@@ -213,7 +218,7 @@ Author=jekovcar
 3=Settings have changed, do you want to rescan drives?
 
 [DIALOG_32]
-0=Drive Certificate
+0=AACS Certificate Decoder
 3=Type:
 4=Bus encryption:
 5=Length:
@@ -322,11 +327,11 @@ Author=jekovcar
 71=Введенный вами регистрационный ключ недействителен.
 72=Нет диска
 73=Сбросить ВСЕ параметры к значениям по умолчанию?\n\nНажатие «Нет» приведет к сбросу параметров текущей страницы.
-74=ID
+74=RowID
 75=Статус
 76=Этикетка
 77=Тип
-78=Емкость
+78=Размер
 79=Дата
 80=Диск ID
 81=Дата Добавления
@@ -410,3 +415,6 @@ Author=jekovcar
 159=There is no enough space on destination drive %C:!
 160=Action
 161=Rescan
+162=Optional
+163=File submitted successfully, thank you!
+164=Close this window
