--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -352,7 +352,7 @@ Author=jekovcar
 96=&Опресни
 97=&Редактиране
 98=&Импорт...
-99=
+99=&Export...
 100=Коментар:
 101=Проверка ISO
 102=Проверка На Папка
