--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -352,7 +352,7 @@ Author=The Punisher
 96=&Aktualisieren
 97=&Bearbeiten
 98=&Importieren...
-99=
+99=&Export...
 100=Kommentar
 101=ISO überprüfen
 102=Ordner überprüfen
