--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -352,7 +352,7 @@ Author=Andex
 96=&Actualiser
 97=&Editer...
 98=&Importer un catalogue...
-99=
+99=&Export...
 100=Commentaire
 101=Fichier
 102=Dossier
