--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -352,7 +352,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 96=&Segarkan
 97=&Sunting
 98=&Impor...
-99=
+99=&Export...
 100=Komentar
 101=Verifikasikan ISO
 102=Verifikasikan Folder
