--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -352,7 +352,7 @@ Author=bovirus (bovirus@gmail.com)
 96=Aggiorna
 97=&Modifica
 98=&Importa...
-99=
+99=&Export...
 100=Commento
 101=Verifica ISO
 102=Verifica cartella
