--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -352,7 +352,7 @@ Author=jekovcar
 96=Обновить
 97=&Редактировать
 98=&Импорт...
-99=
+99=&Export...
 100=Комментарий
 101=Проверить ISO
 102=Проверить папку
