--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -352,7 +352,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 96=&Refrescar
 97=&Editar
 98=&Importar...
-99=
+99=&Export...
 100=Comentario
 101=Verificar ISO
 102=Verificar Carpeta
