--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -352,7 +352,7 @@ Author=Harry Samwel, Sopor
 96=Uppdatera
 97=Redigera
 98=Importera...
-99=
+99=&Export...
 100=Kommentar
 101=Verifiera ISO
 102=Verifiera Mapp
