--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -352,7 +352,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 96=Osveži
 97=&Edit
 98=&Import...
-99=
+99=&Export...
 100=Comment
 101=Verify ISO
 102=Verify Folder
