--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x041D
 Name=Swedish (Svenska)
-Version=2.8.5
+Version=2.8.6
 Author=Harry Samwel, Sopor
 1=OK
 2=Avbryt
@@ -102,7 +102,7 @@ Author=Harry Samwel, Sopor
 8=Storlek:
 9=Skydd:
 10=Fritt utrymme:
-11=Storlek:
+11=Kapacitet:
 12=Behåll skydd
 13=Verifiera hash för innehåll
 14=Skapa MD5 kontrollsummafil
@@ -190,16 +190,16 @@ Author=Harry Samwel, Sopor
 6=Ljud efter misslyckad process:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=Metafilrapport
+1=Skicka
+3=Skapar metafilen för skivan, snälla vänta...
 4=Lägger till %s...
-5=<a>Submit manually?</a>
-6=Metafile:
-7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+5=<a>Skicka manuellt?</a>
+6=Metafil:
+7=Epost:
+8=Kommentar:
+9=Laddar upp %s av %s
+10=Ladda upp metafilen ovan till en filvärd som %s, sen <a>skicka nedladdningslänken</a>.
 
 [DIALOG_29]
 0=Funktioner
@@ -218,7 +218,7 @@ Author=Harry Samwel, Sopor
 3=Inställningar har ändrats, vill du skanna om enheterna?
 
 [DIALOG_32]
-0=Enhetscertifikat
+0=AACS Certifikatdekoder
 3=Typ:
 4=Busskryptering:
 5=Längd:
@@ -295,7 +295,7 @@ Author=Harry Samwel, Sopor
 39=%C:\[%S]
 40=Status
 41=Öppna i webläsare
-42=Skapa en dumpfil
+42=Skicka en metafil
 43=Verifiera hash...
 44=Kopiera till hårddisk...
 45=Kopiera till skivavbild...
@@ -337,7 +337,7 @@ Author=Harry Samwel, Sopor
 81=Inlagd
 82=MKB
 83=Huvudspellista
-84=BD+
+84=BD+ skapad
 85=
 86=VID
 87=MK
@@ -352,7 +352,7 @@ Author=Harry Samwel, Sopor
 96=Uppdatera
 97=Redigera
 98=Importera...
-99=&Export...
+99=Exportera...
 100=Kommentar
 101=Verifiera ISO
 102=Verifiera Mapp
@@ -415,6 +415,7 @@ Author=Harry Samwel, Sopor
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+162=Valfri
+163=Filen skickades, tack så mycket!
+164=Stäng detta fönster
+
