--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.8.4
+Version=2.8.6
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -190,16 +190,16 @@ Author=bovirus (bovirus@gmail.com)
 6=Suono errore durante il ripping:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=Inoltro Metafile
+1=&Inoltra
+3=Creazione metafile del disco, attendere...
 4=Aggiunta di %s...
-5=<a>Submit manually?</a>
+5=<a>Inoltra manualmente?</a>
 6=Metafile:
 7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Commento:
+9=Upload %s di %s
+10=Fai l'upload del metafile soprastante ad un host file come %s, poi <a>trasmetti il link di scaricamento</a>.
 
 [DIALOG_29]
 0=Azioni
@@ -218,7 +218,7 @@ Author=bovirus (bovirus@gmail.com)
 3=Impostazioni modificate, vuoi eseguire nuovamente la scansione delle unità?
 
 [DIALOG_32]
-0=Certificato unità
+0=Certificato decoder AACS
 3=Tipo:
 4=Criptazione bus:
 5=Lunghezza:
@@ -295,7 +295,7 @@ Author=bovirus (bovirus@gmail.com)
 39=%C:\[%S]
 40=&Stato
 41=&Apri in Explorer
-42=&Crea un file di dump
+42=&Trasmissione metafile
 43=&Verificatore Hash contenuto
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
@@ -332,12 +332,12 @@ Author=bovirus (bovirus@gmail.com)
 76=Etichetta
 77=Tipo
 78=Dimensione
-79=Data
+79=Creato
 80=ID disco
-81=Data aggiunta
+81=Aggiunto
 82=MKB
 83=Playlist principale
-84=Data BDP
+84=BDP creato
 85=
 86=VID
 87=MK
@@ -415,6 +415,6 @@ Author=bovirus (bovirus@gmail.com)
 159=Spazio insufficiente nell'unità di destinazione %C:!
 160=Azione
 161=Riesegui la scansione
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+162=Opzionale
+163=File inoltrato con successo, grazie!
+164=Chiudi questa finestra
